package com.example.GroceryStoreApp.commons.enums;

public enum Currency {
    USD,
    EUR,
    GBP,
    JPY,
    AUD,
    CAD
}
