package com.example.GroceryStoreApp.commons.enums;

public enum CurrentEmploymentStatus {
    Employed,
    Fired,
    Suspended,
    InVacation
}
