package com.example.GroceryStoreApp.commons.enums;

public enum DaysOfTheWeek {
    Monday,
    Tuesday,
    Wednesday,
    Thursday,
    Friday,
    Saturday,
    Sunday,
    Monday_Friday,
    Monday_Tuesday,
    Monday_Wednesday,
    Monday_Thursday,
    Monday_Saturday,
    Monday_Sunday,
    Tuesday_Wednesday,
    Tuesday_Thursday,
    Tuesday_Friday,
    Tuesday_Saturday,
    Tuesday_Sunday,
    Wednesday_Thursday,
    Wednesday_Friday,
    Wednesday_Saturday,
    Wednesday_Sunday,
    Thursday_Friday,
    Thursday_Saturday,
    Thursday_Sunday,
    Friday_Saturday,
    Friday_Sunday,
    Saturday_Sunday,
    Monday_Tuesday_Wednesday,
    Monday_Tuesday_Thursday,
    Monday_Tuesday_Friday,
    Monday_Tuesday_Saturday,
    Monday_Tuesday_Sunday,
    Monday_Wednesday_Thursday,
    Monday_Wednesday_Friday,
    Monday_Wednesday_Saturday,
    Monday_Wednesday_Sunday,
    Monday_Thursday_Friday,
    Monday_Thursday_Saturday,
    Monday_Thursday_Sunday,
    Monday_Friday_Saturday,
    Monday_Friday_Sunday,
    Monday_Saturday_Sunday,
    Tuesday_Wednesday_Thursday,
    Tuesday_Wednesday_Friday,
    Tuesday_Wednesday_Saturday,
    Tuesday_Wednesday_Sunday,
    Tuesday_Thursday_Friday,
    Tuesday_Thursday_Saturday,
    Tuesday_Thursday_Sunday,
    Tuesday_Friday_Saturday,
    Tuesday_Friday_Sunday,
    Tuesday_Saturday_Sunday,
    Wednesday_Thursday_Friday,
    Wednesday_Thursday_Saturday,
    Wednesday_Thursday_Sunday,
    Wednesday_Friday_Saturday,
    Wednesday_Friday_Sunday,
    Wednesday_Saturday_Sunday,
    Thursday_Friday_Saturday,
    Thursday_Friday_Sunday,
    Thursday_Saturday_Sunday,
    Friday_Saturday_Sunday,
    Monday_Tuesday_Wednesday_Thursday,
    Monday_Tuesday_Wednesday_Friday,
    Monday_Tuesday_Wednesday_Saturday,
    Monday_Tuesday_Wednesday_Sunday,
    Monday_Tuesday_Thursday_Friday,
    Monday_Tuesday_Thursday_Saturday,
    Monday_Tuesday_Thursday_Sunday,
    Monday_Tuesday_Friday_Saturday,
    Monday_Tuesday_Friday_Sunday,
    Monday_Tuesday_Saturday_Sunday,
    Monday_Wednesday_Thursday_Friday,
    Monday_Wednesday_Thursday_Saturday,
    Monday_Wednesday_Thursday_Sunday,
    Monday_Wednesday_Friday_Saturday,
    Monday_Wednesday_Friday_Sunday,
    Monday_Wednesday_Saturday_Sunday,
    Monday_Thursday_Friday_Saturday,
    Monday_Thursday_Friday_Sunday,
    Monday_Thursday_Saturday_Sunday,
    Monday_Friday_Saturday_Sunday,
    Tuesday_Wednesday_Thursday_Friday,
    Tuesday_Wednesday_Thursday_Saturday,
    Tuesday_Wednesday_Thursday_Sunday,
    Tuesday_Wednesday_Friday_Saturday,
    Tuesday_Wednesday_Friday_Sunday,
    Tuesday_Wednesday_Saturday_Sunday,
    Tuesday_Thursday_Friday_Saturday,
    Tuesday_Thursday_Friday_Sunday,
    Tuesday_Thursday_Saturday_Sunday,
    Tuesday_Friday_Saturday_Sunday,
    Wednesday_Thursday_Friday_Saturday,
    Wednesday_Thursday_Friday_Sunday,
    Wednesday_Thursday_Saturday_Sunday,
    Wednesday_Friday_Saturday_Sunday,
    Thursday_Friday_Saturday_Sunday,
    Monday_Tuesday_Wednesday_Thursday_Friday,
    Monday_Tuesday_Wednesday_Thursday_Saturday,
    Monday_Tuesday_Wednesday_Thursday_Sunday,
    Monday_Tuesday_Wednesday_Friday_Saturday,
    Monday_Tuesday_Wednesday_Friday_Sunday,
    Monday_Tuesday_Wednesday_Saturday_Sunday,
    Monday_Tuesday_Thursday_Friday_Saturday,
    Monday_Tuesday_Thursday_Friday_Sunday,
    Monday_Tuesday_Thursday_Saturday_Sunday,
    Monday_Tuesday_Friday_Saturday_Sunday,
    Monday_Wednesday_Thursday_Friday_Saturday,
    Monday_Wednesday_Thursday_Friday_Sunday,
    Monday_Wednesday_Thursday_Saturday_Sunday,
    Monday_Wednesday_Friday_Saturday_Sunday,
    Monday_Thursday_Friday_Saturday_Sunday,
    Tuesday_Wednesday_Thursday_Friday_Saturday,
    Tuesday_Wednesday_Thursday_Friday_Sunday,
    Tuesday_Wednesday_Thursday_Saturday_Sunday,
    Tuesday_Wednesday_Friday_Saturday_Sunday,
    Tuesday_Thursday_Friday_Saturday_Sunday,
    Wednesday_Thursday_Friday_Saturday_Sunday,
    Monday_Tuesday_Wednesday_Thursday_Friday_Saturday,
    Monday_Tuesday_Wednesday_Thursday_Friday_Sunday,
    Monday_Tuesday_Wednesday_Thursday_Saturday_Sunday,
    Monday_Tuesday_Wednesday_Friday_Saturday_Sunday,
    Monday_Tuesday_Thursday_Friday_Saturday_Sunday,
    Monday_Wednesday_Thursday_Friday_Saturday_Sunday,
    Tuesday_Wednesday_Thursday_Friday_Saturday_Sunday,
    Monday_Tuesday_Wednesday_Thursday_Friday_Saturday_Sunday
}