package com.example.GroceryStoreApp.commons.enums;


public enum PaymentMethod {
    Cash,
    Credit,
    Debit
}
