package com.example.GroceryStoreApp.commons.enums;




public enum ProductAvailability {
    Available,
    NonAvailable,
    LastRemaining
}
