package com.example.GroceryStoreApp.subdomains.clientmanagementsubdomain.dataaccesslayer;

public enum MembershipStatus {
    Active,
    Suspended,
    Closed
}
